--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Página Pessoal do Reginaldo Junior</h1>
     <p>
         <a href="exemplos/aulacss.html">aula css</a>
-        <a href="C:\Users\2022105100027\Documents\prog1_2022\exemplos\formulario.html"><button>Formulário</button></a>
+        <a href="exemplos\formulario.html"><button>Formulário</button></a>
     </p>
 </body>
 </html>
