--- a/exemplos/formulario.html
+++ b/exemplos/formulario.html
@@ -7,13 +7,14 @@
     <title>Meu Formulário</title>
 </head>
 <body>
-    <a href="C:\Users\2022105100027\Documents\prog1_2022\index.html"><button>Voltar</button></a>
+    <a href="index.html"><button>Voltar</button></a>
     <h1>Meu Formulário</h1>
     <form>
         <table>
             <tr>
                 <td><label for="nome">Nome:</label></td>
-                <td><input type="text" name="nome" id="nome" placeholder="Seu Nome">
+                <td><input type="text" name="nome" id="nome" 
+                    placeholder="Seu Nome">
                 </td>
             </tr>
             <tr>
